deployment/fastapi_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-webhook
  template:
    metadata:
      labels:
        app: fastapi-webhook
    spec:
      containers:
      - name: fastapi-webhook
        image: ildmi/fastapi-webhook:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-webhook
spec:
  selector:
    app: fastapi-webhook
  ports:
  - port: 8000
    targetPort: 8000
  type: LoadBalancer
