deployment/fastapi_deployment_ks_v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-webhook
  template:
    metadata:
      labels:
        app: fastapi-webhook
    spec:
      containers:
        - name: fastapi-webhook
          image: ildmi/fastapi-webhook:latest
          ports:
            - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker-mongodb
  template:
    metadata:
      labels:
        app: celery-worker-mongodb
    spec:
      containers:
        - name: celery-worker-mongodb
          image: ildmi/fastapi-webhook:latest
          command: [ "celery" ]
          args: [ "-A", "celery_app", "worker", "--loglevel=DEBUG", "-P", "solo", "-Q", "mongo_db" ]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker-admin
  template:
    metadata:
      labels:
        app: celery-worker-admin
    spec:
      containers:
        - name: celery-worker-admin
          image: ildmi/fastapi-webhook:latest
          command: [ "celery" ]
          args: [ "-A", "celery_app", "worker", "--loglevel=DEBUG", "-P", "solo", "-Q", "admin_notes" ]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
      volumes:
        - name: mongodb-data
          emptyDir: { }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:7.14.0
          ports:
            - containerPort: 9200
            - containerPort: 9300
          volumeMounts:
            - name: elasticsearch-data
              mountPath: /usr/share/elasticsearch/data
      volumes:
        - name: elasticsearch-data
          emptyDir: { }
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-webhook
spec:
  selector:
    app: fastapi-webhook
  ports:
    - port: 8000
      targetPort: 8000
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  selector:
    app: elasticsearch
  ports:
    - name: rest
      port: 9200
      targetPort: 9200
    - name: inter-node
      port: 9300
      targetPort: 9300
  type: LoadBalancer
