deployment/fastapi_deployment_v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-webhook
  template:
    metadata:
      labels:
        app: fastapi-webhook
    spec:
      containers:
      - name: fastapi-webhook
        image: ildmi/fastapi-webhook:latest
        ports:
        - containerPort: 8000
      - name: celery-worker
        image: ildmi/fastapi-webhook:latest
        command: ["celery"]
        args: ["-A", "celery_app", "worker", "--loglevel=DEBUG", "-P", "solo"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-webhook
spec:
  selector:
    app: fastapi-webhook
  ports:
  - port: 8000
    targetPort: 8000
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
