deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-webhook-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - fastapiwebhook.info
    secretName: fastapi-tls
  rules:
  - host: fastapiwebhook.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi-webhook
            port:
              number: 8000
